@startuml
'https://plantuml.com/sequence-diagram

class Main{
    +main(String[]args):void
}
class WordTrainer {
    -<linkedList>WordPair:
    -correctCount
    -attempts
    -falseCount

    + setCorrectCount(): void
        + setFalseCount(): void
        + getCorrectCount(): int
        + getFalseCount(): int
        + getAttempts(): int
        + setAttempts(): void
}

class WordPair {
    - word
    - url
    +WordPair(word: String,url:String)
    +WordPair()
    +checkURL(): boolean
    + getWord(): String
    + getUrl(): String



}

class Gui {

    + Gui()
    + displayImage(): void


}
class JFrame{
}
interface PersistanceStrategy{
    +save(WordTrainer wordTrainer): void
    +load(): WordTrainer
}
class SaveJson{
    +save(WordTrainer wordTrainer): void
    +load(): WordTrainer
}

file file{

}

WordTrainer o-- WordPair: uses 1..*
Gui --> WordTrainer
Gui o--> PersistanceStrategy
SaveJson <--> file:1..1
Main --> Gui: 1
SaveJson ..|> PersistanceStrategy
Gui --|> JFrame


@enduml
